# jfrog-artifactory-clearner

./: .gitignore  Dockerfile  README.md  config.toml.example  main.py  pyproject.toml
src/: main.py
