[project]
name = "jfrog-artifactory-clearner"
version = "0.1.0"
description = "Clean old images from JFrog Container Registry"
requires-python = ">=3.13"
dependencies = ["requests>=2.31.0"]

[project.scripts]
main = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
