[project]
name = "jfrog-artifactory-clearner"
version = "0.1.0"
description = "Clean old images from JFrog Container Registry"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "rich>=14.2.0",
]

[project.scripts]
main = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.3",
    "types-requests>=2.32.4.20250913",
]
